--- a/projects/common/src/components/navbar/navbar.component.html
+++ b/projects/common/src/components/navbar/navbar.component.html
@@ -1,3 +1,7 @@
-<mat-toolbar>
-	<span>Blog</span>
-</mat-toolbar>
+<nav class="theme-grey ">
+	<div class="nav-wrapper container">
+		<a href="/blog/" class="brand-logo">Blog</a>
+		<ul id="nav-mobile" class="right hide-on-med-and-down">
+		</ul>
+	</div>
+</nav>
