--- a/projects/blog/src/app/post/post.component.scss
+++ b/projects/blog/src/app/post/post.component.scss
@@ -1,8 +1,8 @@
 @import "projects/common/src/assets/scss/theme";
 
-.markdown {
+markdown {
 	h1, h2, h3, h4, h5, h6 {
-		color: $theme-primary-dark;
+		color: $theme-primary-light;
 	}
 	a {
 		color: $theme-primary;
