--- a/projects/blog/src/app/post/post.component.html
+++ b/projects/blog/src/app/post/post.component.html
@@ -5,8 +5,9 @@
 	</div>
 	<div class="row">
 		<h3>{{post.title}}</h3>
-		<h4>{{post.user.displayName}}</h4>
-		<markdown class="markdown">
+		<h6 class="theme-grey-light-text">Posted by: <span class="theme-primary-text">{{post.user.displayName}}</span></h6>
+		<h6 class="theme-grey-light-text">Posted at: <span class="theme-white-text">{{post.datePosted | date}}</span></h6>
+		<markdown>
 			{{post?.body}}
 		</markdown>
 	</div>
