--- a/projects/common/src/styles.scss
+++ b/projects/common/src/styles.scss
@@ -14,3 +14,10 @@ a {
 		color: $theme-primary-light !important;
 	}
 }
+
+.blob {
+	background-color: $theme-primary;
+	padding: .2em .5em;
+	border-radius: 10px;
+	margin-right: .2em;
+}
