--- a/projects/common/src/components/navbar/navbar.component.html
+++ b/projects/common/src/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="theme-grey ">
+<nav class="theme-grey" id="navbar">
 	<div class="nav-wrapper container">
 		<a href="/blog/" class="brand-logo">Blog</a>
 		<ul id="nav-mobile" class="right hide-on-med-and-down">
