--- a/projects/blog/src/app/post-list/post-list.component.html
+++ b/projects/blog/src/app/post-list/post-list.component.html
@@ -5,10 +5,17 @@
 		facilis, fuga impedit iste maxime minus perspiciatis quam quas saepe tenetur ullam vitae, voluptas voluptate.
 		Libero.
 	</p>
+
 	<ng-container *ngIf="posts.length > 0; else noPosts">
-		<blog-post-list-item *ngFor="let post of posts" [post]="post"></blog-post-list-item>
+		<blog-post-list-item
+				*ngFor="let post of posts | paginate: { itemsPerPage: 5, currentPage: page }"
+				[post]="post">
+		</blog-post-list-item>
 	</ng-container>
+
 	<ng-template #noPosts>
 		<blog-post-list-skeleton *ngFor="let _ of [0,1,2,3,4];"></blog-post-list-skeleton>
 	</ng-template>
+
+	<pagination-controls [autoHide]="true" [responsive]="true" (pageChange)="page = $event"></pagination-controls>
 </div>
