--- a/projects/login/src/app/login-form/login-form.component.html
+++ b/projects/login/src/app/login-form/login-form.component.html
@@ -1,16 +1,21 @@
-<mat-card>
-	<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
-		<mat-card-title>Login</mat-card-title>
-		<mat-card-content>
-			<mat-form-field class="full-width">
-				<input matInput placeholder="Username" formControlName="username">
-			</mat-form-field>
-			<mat-form-field class="full-width">
-				<input matInput placeholder="Password" formControlName="password">
-			</mat-form-field>
-		</mat-card-content>
-		<mat-card-actions>
-			<button mat-raised-button color="primary" type="submit">Login</button>
-		</mat-card-actions>
-	</form>
-</mat-card>
+<form class="col s12" [formGroup]="loginForm" (submit)="onSubmit()" method="post">
+	<div class="row">
+		<div class="input-field col s12 m6 l6 xl4 offset-m3 offset-l4 offset-xl4">
+			<input formControlName="username" type="text"/>
+			<label>Username</label>
+		</div>
+	</div>
+	<div class="row">
+		<div class="input-field col s12 m6 l6 xl4 offset-m3 offset-l4 offset-xl4">
+			<input formControlName="password" type="password"/>
+			<label>Password</label>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col s12 center">
+			<button class="btn btn-theme waves-effect waves-light" type="submit" name="action">
+				Login<i class="material-icons right">send</i>
+			</button>
+		</div>
+	</div>
+</form>
