admin sidenav, admin post list

--- a/projects/common/src/assets/scss/theme.scss
+++ b/projects/common/src/assets/scss/theme.scss
@@ -5,10 +5,13 @@ $theme-primary: #4ecca3;
 $theme-primary-dark: #3ea183;
 $theme-primary-light: #94d7c1;
 $theme-white: #eeeeee;
+$theme-red: #d72323;
 
 $theme-text: $theme-white;
 $theme-text-disabled: $theme-white;
 $theme-background: $theme-black;
+$theme-background-darker: darken($theme-black, 2%);
+$theme-error: $theme-red;
 
 $font-primary: Lato;
 
@@ -94,8 +97,24 @@ html, body {
 	@include bg-color($theme-white);
 }
 
+.theme-error-text {
+	@include color($theme-red);
+}
+
+.theme-error-border {
+	@include border-color($theme-red);
+}
+
+.theme-error {
+	@include bg-color($theme-red);
+}
+
 .btn-flat {
 	color: $theme-primary;
+
+	&:hover {
+		background-color: $theme-primary !important;
+	}
 }
 
 .btn {
@@ -104,7 +123,7 @@ html, body {
 
 	&:hover {
 		background-color: $theme-primary;
-		color: white!important;
+		color: white !important;
 	}
 
 }
@@ -119,12 +138,40 @@ html, body {
 	}
 }
 
+.ngx-pagination {
+	li.disabled {
+		&, & span {
+			color: $theme-grey-light !important;
+		}
+	}
+
+	li.ng-star-inserted {
+		border-radius: 10px !important;
+	}
+
+	a.ng-star-inserted {
+		color: $theme-white !important;
+
+		&:hover {
+			&, span {
+				color: $theme-grey !important;
+				border-radius: 10px !important;
+			}
+		}
+	}
+
+	.current {
+		border-radius: 10px !important;
+		background: $theme-primary !important;
+	}
+}
 
 ::-webkit-scrollbar {
 	width: .5em;
 }
 
 ::-webkit-scrollbar-track {
+	background-color: $theme-background-darker;
 }
 
 ::-webkit-scrollbar-thumb {
