--- a/projects/admin/src/app/admin.component.html
+++ b/projects/admin/src/app/admin.component.html
@@ -1,2 +1,7 @@
 <common-navbar></common-navbar>
+<div class="container">
+	<div class="row">
+		<admin-sidenav></admin-sidenav>
+	</div>
+</div>
 <router-outlet></router-outlet>
