--- a/projects/blog/src/app/post-list/post-list-item/post-list-item.component.html
+++ b/projects/blog/src/app/post-list/post-list-item/post-list-item.component.html
@@ -1,7 +1,7 @@
 <div @fadeInOut class="pr-3 pl-3">
 	<span class="category"><a href="#">{{post.category.name}}</a></span>
 	<h4>
-		<a routerLink="/post/{{post.id}}">{{ post?.title }}</a>
+		<a routerLink="/post/{{post.slug}}">{{ post?.title }}</a>
 		<small>{{post.datePosted | date}}</small>
 	</h4>
 	<p class="flow-text">{{ post?.excerpt }}</p>
