confirm dialog implementation

--- a/projects/admin/src/app/admin.component.html
+++ b/projects/admin/src/app/admin.component.html
@@ -1,6 +1,6 @@
 <common-navbar></common-navbar>
 <div class="container">
-	<div class="row">
+	<div class="row mb-1 mt-1">
 		<admin-sidenav></admin-sidenav>
 	</div>
 </div>
