--- a/projects/admin/src/app/post-list/post-list-item/post-list-item.component.html
+++ b/projects/admin/src/app/post-list/post-list-item/post-list-item.component.html
@@ -1,10 +1,13 @@
 <li class="admin-post-list-item collection-item">
 	<div class="row">
 		<div class="col s4 m6 l2 truncate">
-			{{post.title}}
+			<a target="_blank" href="{{blogUrl}}/post/{{post.slug}}">{{post.title}}</a>
 		</div>
 		<div class="col s2 hide-on-med-and-down truncate">
-			<a target="_blank" href="{{blogUrl}}/post/{{post.slug}}">{{post.slug}}</a>
+			<a target="_blank" href="{{blogUrl}}/post/{{post.slug}}">
+				<i class="material-icons left">open_in_new</i>
+				{{post.slug}}
+			</a>
 		</div>
 		<div class="col s2 hide-on-med-and-down">
 			{{post.user.displayName}}
@@ -13,14 +16,16 @@
 			<span class="blob grey darken-2">{{post.category.name}}</span>
 		</div>
 		<div class="col s2 m2 l1">
-			<i class="material-icons theme-primary-text" *ngIf="post.published">assignment_turned_in</i>
+			<i class="material-icons theme-primary-text tooltipped cursor" *ngIf="post.published"
+			   data-tooltip="Published">assignment_turned_in</i>
 			<i class="material-icons" *ngIf="!post.published"></i>
 		</div>
 		<div class="col s2 m2 l1">
 			{{post.lastModifiedDate | toDate | amTimeAgo}}
 		</div>
 		<div class="col s2 m2 l2">
-
+			<a  class="pointer tooltipped" data-tooltip="Edit"><i class="material-icons theme-primary-text">edit</i></a>
+			<a (click)="delete()" class="pointer tooltipped" data-tooltip="Delete"><i class="material-icons theme-error-text">delete</i></a>
 		</div>
 	</div>
 </li>
