--- a/projects/admin/src/app/post-list/post-list.component.html
+++ b/projects/admin/src/app/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<div class="p-2">
+<div class="pl-2 pr-2">
 	<div class="admin-post-list">
 		<nav>
 			<div class="nav-wrapper">
@@ -42,3 +42,4 @@
 		<pagination-controls [autoHide]="false" [responsive]="true" (pageChange)="page = $event"></pagination-controls>
 	</div>
 </div>
+<common-confirm-dialog></common-confirm-dialog>
