--- a/projects/common/src/assets/scss/helpers.scss
+++ b/projects/common/src/assets/scss/helpers.scss
@@ -765,8 +765,13 @@ a.text-dark:focus {
 .d-inline-block {
 	display: inline-block !important;
 }
+
 .pointer {
 	cursor: pointer;
+}
+
+.cursor {
+	cursor: default;
 }
 
 @media only screen and (min-width: 360px) {
