--- a/projects/admin/src/app/post-list/post-list.component.html
+++ b/projects/admin/src/app/post-list/post-list.component.html
@@ -37,7 +37,10 @@
 					</div>
 				</div>
 			</li>
-			<admin-post-list-item *ngFor="let post of posts | paginate: { itemsPerPage: 10, currentPage: page }" [post]="post"></admin-post-list-item>
+			<admin-post-list-item *ngFor="let post of posts | paginate: { itemsPerPage: 10, currentPage: page }"
+			                      (onDelete)="onDelete($event)"
+			                      [post]="post">
+			</admin-post-list-item>
 		</ul>
 		<pagination-controls [autoHide]="false" [responsive]="true" (pageChange)="page = $event"></pagination-controls>
 	</div>
