--- a/projects/admin/src/app/edit-post/edit-post.component.html
+++ b/projects/admin/src/app/edit-post/edit-post.component.html
@@ -26,12 +26,12 @@
 				</div>
 				<div class="row">
 					<div class="col s12">
-						<div class="input-select">
-							<label>Category</label>
-							<select formControlName="category">
-								<option [ngValue]="null" disabled>Select a category</option>
-								<option *ngFor="let categ of categories" [ngValue]="categ.id">{{categ.name}}</option>
+						<div class="input-field">
+							<select formControlName="category" id="categorySelect">
+								<option value="" disabled>Select a category</option>
+								<option *ngFor="let categ of categories" [value]="categ.id">{{categ.name}}</option>
 							</select>
+							<label>Category</label>
 						</div>
 					</div>
 				</div>
