chips input for post tags

--- a/projects/admin/src/app/post-list/post-list.component.html
+++ b/projects/admin/src/app/post-list/post-list.component.html
@@ -1,10 +1,10 @@
 <div class="pl-2 pr-2">
 	<div class="admin-post-list">
 		<nav>
-			<div class="nav-wrapper">
+			<div class="nav-wrapper container">
 				<ul class="right">
 					<li>
-						<a href="">
+						<a routerLink="edit" tooltip="New post">
 							<i class="material-icons left theme-black-text">add_to_photos</i>
 						</a>
 					</li>
