--- a/projects/admin/src/app/edit-post/edit-post.component.html
+++ b/projects/admin/src/app/edit-post/edit-post.component.html
@@ -27,6 +27,16 @@
 				<div class="row">
 					<div class="col s12">
 						<div class="input-field">
+							<div class="chips chips-autocomplete">
+								<input type="text">
+							</div>
+							<label>Tags</label>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<div class="input-field">
 							<select formControlName="category" id="categorySelect">
 								<option value="" disabled>Select a category</option>
 								<option *ngFor="let categ of categories" [value]="categ.id">{{categ.name}}</option>
@@ -55,3 +65,4 @@
 		</div>
 	</form>
 </div>
+<common-scroll-to-float target="#navbar"></common-scroll-to-float>
