editor border radius

--- a/projects/admin/src/app/edit-post/edit-post.component.scss
+++ b/projects/admin/src/app/edit-post/edit-post.component.scss
@@ -29,8 +29,9 @@
 
 	.editor-toolbar {
 
-		border-radius: 0;
 		border: none;
+		border-top-right-radius: 5px;
+		border-top-left-radius: 5px;
 		background-color: $theme-primary;
 
 		button {
