--- a/projects/blog/src/app/post-list/post-list-item/post-list-item.component.html
+++ b/projects/blog/src/app/post-list/post-list-item/post-list-item.component.html
@@ -2,7 +2,7 @@
 	<span class="category"><a href="#">{{post.category.name}}</a></span>
 	<h4>
 		<a routerLink="/post/{{post.slug}}">{{ post?.title }}</a>
-		<small>{{post.datePosted | date}}</small>
+		<small>{{post.createdDate | date}}</small>
 	</h4>
 	<p class="flow-text">{{ post?.excerpt }}</p>
 	<div>
