--- a/projects/admin/src/app/sidenav/sidenav.component.html
+++ b/projects/admin/src/app/sidenav/sidenav.component.html
@@ -4,7 +4,7 @@
 			<div class="background">
 				<!--<img src="images/office.jpg">-->
 			</div>
-			<a href="#user"><img class="circle" src="../../assets/img/profile.png"></a>
+			<a href="#user"><img class="circle" src="assets/img/profile.png"></a>
 			<a href="#name"><span class="name">{{user?.firstName}} {{user?.lastName}}</span></a>
 			<a href="#email"><span class="email">{{user?.email}}</span></a>
 		</div>
