--- a/projects/admin/src/app/sidenav/sidenav.component.html
+++ b/projects/admin/src/app/sidenav/sidenav.component.html
@@ -10,11 +10,11 @@
 		</div>
 	</li>
 	<li><a routerLink="edit" class="sidenav-close"><i class="material-icons">add_to_photos</i>New Post</a></li>
-	<li><a routerLink="" class="sidenav-close"><i class="material-icons">format_list_bulleted</i>Posts</a></li>
-	<!--<li>-->
-	<!--	<div class="divider"></div>-->
-	<!--</li>-->
-	<!--<li><a class="subheader">Subheader</a></li>-->
-	<!--<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>-->
+	<li>
+		<div class="divider"></div>
+	</li>
+	<li><a routerLink="" class="sidenav-close"><i class="material-icons">library_books</i>Posts</a></li>
+	<li><a routerLink="categories" class="sidenav-close"><i class="material-icons">format_list_bulleted</i>Categories</a></li>
+	<li><a routerLink="tags" class="sidenav-close"><i class="material-icons">label</i>Tags</a></li>
 </ul>
 <a href="#" data-target="admin-sidenav" class="sidenav-trigger right btn-large btn-flat"><i class="material-icons">menu</i></a>
